# knobclient

./: .gitignore  README.rst  requirements.txt  setup.cfg
knobclient/: __init__.py  client.py  exc.py  i18n.py  knob.py  shell.py
knobclient/common/: base.py  utils.py
knobclient/osc/: plugin.py
knobclient/osc/v1/: associate.py  delegate.py  gate.py  resource_type.py  service.py  target.py
knobclient/v1/: associates.py  client.py  delegates.py  gates.py  resource_types.py  services.py  targets.py
