[metadata]
name = python-knobclient
summary = OpenStack SSH as a service API
description-file =
    README.rst
author = OpenStack
author-email = igor.shafran@toganetworks.com
home-page = http://google.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    knobclient

[entry_points]
console_scripts =
    knob = knobclient.shell:main

openstack.cli.extension =
    knob = knobclient.osc.plugin

openstack.knob.v1 =
    delegate_create = knobclient.osc.v1.service:CreateDelegate
    delegate_delete = knobclient.osc.v1.service:DeleteDelegate
    delegate_list = knobclient.osc.v1.service:ListDelegate
    target_create = knobclient.osc.v1.target:CreateTarget
    target_delete = knobclient.osc.v1.target:DeleteTarget
    target_list = knobclient.osc.v1.target:ListTarget
    associate_create = knobclient.osc.v1.associate:CreateAssociate
    associate_delete = knobclient.osc.v1.associate:DeleteAssociate
    associate_list = knobclient.osc.v1.associate:ListAssociate

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = knobclient/locale/knobclient.pot

[compile_catalog]
directory = knobclient/locale
domain = knobclient

[update_catalog]
domain = knobclient
output_dir = knobclient/locale
input_file = knobclient/locale/knobclient.pot
